syntax = "proto3";

package session;

option go_package = "generated/session";
import "google/protobuf/timestamp.proto";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc GetUserData(LoginRequest) returns (LoginResponse);
    rpc UpdateUserPassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string role = 4;
}

message RegisterResponse {
    string message = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
    int32 id = 3;
}

message LoginResponse {
    string message = 1;
    int32 id = 2;
    string username = 3;
    string password = 4;
    string role = 5;
    string token = 6;
}

message InsertSessionRequest {
    int32 id = 1;
    int32 userId = 2;
    google.protobuf.Timestamp createdAt = 3;
    google.protobuf.Timestamp expiredAt = 4;
}

message InsertSessionResponse {
    string message = 1;
}

message LogoutRequest {
    int32 id = 1;
    int32 userId = 2;
    string token = 3;
    google.protobuf.Timestamp createdAt = 4;
    google.protobuf.Timestamp expiredAt = 5;
}

message LogoutResponse {
    string message = 1;
}

message UpdatePasswordRequest {
    int32 userId = 1;
    string username = 2;
    string oldPassword = 3;
    string newPassword = 4;
    string confirmPassword = 5;
}

message UpdatePasswordResponse {
    string message = 1;
}
